--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
               <input class="mdl-textfield__input" type="text" id="bytes"/>
               <label class="mdl-textfield__label" for="bytes">Enter your bytes</label>
             </div>
+          </br>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
               <input class="mdl-textfield__input" type="text" id="output"/>
               <label class="mdl-textfield__label" for="bytes"></label>
             </div>
-            <a href="https://github.com/google/material-design-lite/blob/master/templates/article/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">DO IT</a>
+            <a href="https://github.com/Jawnnypoo/dembytes" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">SAUCE</a>
           </div>
         </div>
       </main>
