--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="description" content="Check out dem bytes">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>dembytes</title>
 
@@ -45,7 +45,6 @@
     -->
 
     <script src="scripts/jquery-2.2.3.min.js"></script>
-    <script src="scripts/clipboard.min.js"></script>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -91,7 +90,6 @@
     </div>
     <script src="https://code.getmdl.io/1.1.1/material.min.js"></script>
     <script>
-    var clipboard = new Clipboard('.btn');
     $("#bytes").keyup(function(event){
       if(event.keyCode == 13){
         var input = $("#bytes").val();
